# system-symphony

./: README.md  pyproject.toml
src/process-parser/: pyproject.toml
src/process-parser/process_parser/: main.py
src/process-parser/process_parser/supercollider/: process_synths.scd
src/sc/: test_osc.scd
src/system-symphony/: README.md  pyproject.toml
src/system-symphony/process_parser/: main.py
src/system-symphony/supercollider/: process_synths.scd
