[tool.poetry]
name = "process-parser"
version = "0.1.0"
description = ""
authors = ["Darwin <darwin78913@gmail.com>"]
readme = "README.md"
packages = [{include = "process_parser"}]

[tool.poetry.dependencies]
python = "^3.8"
python-osc = "^1.8.0"
psutil = "^5.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
process-hum = "process_parser.main:poll_processes"
