[tool.poetry]
name = "system-symphony"
version = "0.1.0"
description = ""
authors = ["Darwin <darwin78913@gmail.com>", "Kalo <kaloyan.kolev@yale.edu>"]
readme = "README.md"
packages = [{include = "process_parser"}, {include = "supercollider"}]

[tool.poetry.dependencies]
python = "^3.8"
python-osc = "^1.8.0"
psutil = "^5.9.4"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
system-symphony = "process_parser.main:main"
